--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -108,7 +108,7 @@
                 android:visibility="visible"
                 tools:listitem="@layout/item_spending_list"/>
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_clear"
                 android:layout_width="200dp"
                 android:layout_height="40dp"
@@ -116,6 +116,8 @@
                 android:text="@string/dashboard_clearagenda"
                 android:fontFamily="@font/poppins_semibold"
                 android:textSize="12sp"
+                android:textColor="@color/white"
+                android:textAllCaps="false"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/reminder_background"
                 android:layout_marginBottom="20dp"/>
